<resources>
    <string name="app_name">กิจกรรม วิศวกรรมคอมพิวเตอร์</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Login-->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="confirmExit">Do you want to leave the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lblActivityname">ชื่อกิจกรรม </string>
    <string name="lblDescription">รายระเอียดกิจกรรม</string>
    <string name="lblTimeStart">วันเริ่มกิจกรรม</string>
    <string name="lblTimeedit">วันสิ้นสุดกิจกรรม</string>
    <string name="view_DataAll">ดูข้อมูลกิจกรรมทั้งหมด</string>
    <string name="app_main">หน้าหลัก</string>
    <string name="app_showdetail">แสดงข้อมูลส่วนตัว</string>
    <string name="app_logout">ออกจากระบบ</string>
    <string name="action_exit">Exit App</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="txt_adduser">Manage User</string>
    <string name="txt_add_activity">Manage Activity</string>
    <string name="txt_scanble">Manage Beacon</string>
    <!--Login-->
    <!--dialog-->
    <string name="txt_nameUser">Name User :</string>
    <string name="txt_username">Username : </string>
    <string name="txt_password">Password :</string>
    <string name="txt_email">Email :</string>
    <string name="txt_permission">Permission : </string>
    <string name="btn_addActivity">เพิ่มกิจกรรม</string>
    <string name="app_authen">สำหรับผู้ดูแลระบบ</string>
    <string name="app_exit">ปิดแอพ</string>
    <!--dialog-->
</resources>
