<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_app"
            android:icon="@drawable/ic_home"
            android:title="@string/app_main" />
        <item
            android:id="@+id/nav_show_detail"
            android:icon="@drawable/ic_user"
            android:title="@string/app_authen" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_close"
                android:title="@string/app_exit" />

        </menu>
    </item>

</menu>
