<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_user"
            android:icon="@drawable/ic_person_add"
            android:title="@string/txt_adduser" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_add_activity"
            android:title="@string/txt_add_activity" />
        <item
            android:id="@+id/nav_manageBLE"
            android:icon="@drawable/ic_scan_ble"
            android:title="@string/txt_scanble" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_sigout"
                android:icon="@drawable/ic_logout"
                android:title="Sign Out" />
        </menu>
    </item>

</menu>
