<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgActivity"
        android:background="@color/bootstrap_brand_info"
        android:layout_width="match_parent"
        android:layout_height="233dp" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblActivityname"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_activityName"
                        android:text="Name"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="89dp">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDescription"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_detailActivity"
                        android:text="descriptionsdfsdfsdfsdfsdfsdfsdfsdfsfsfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdf"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTimeStart"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_datetimeStart"
                        android:text="date time start"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTimeedit"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_datetimeEnd"
                        android:text="date time start"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</LinearLayout>